--- a/pages/17988.html
+++ b/pages/17988.html
@@ -290,11 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> |
+    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
+    <a href="/nlab/authors" title="Who wrote what">Authors</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
     <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -377,7 +377,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Reshetikhin-Turaev+construction'>Reshetikhin–Turaev model</a> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
+<p><span class='newWikiWord'>Reshetikhin?Turaev model<a href='/nlab/new/Reshetikhin%3FTuraev+model'>?</a></span> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
 </li>
 
 <li>
@@ -633,10 +633,10 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties_2'>Properties</a><ul><li><a href='#HiggsParticle'>Higgs particle self-coupling</a></li></ul></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In the context of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> (QFT) the term <em>asymptotic safety</em> (<a href='#Weinstein79'>Weinstein 79</a>) refers to the situation where a QFT may not be <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalizable</a> (is not defined on all scales by the choice of a <a class='existingWikiWord' href='/nlab/show/finite+number'>finite number</a> of <a class='existingWikiWord' href='/nlab/show/coupling+constants'>coupling constants</a>), but has the property that its <a class='existingWikiWord' href='/nlab/show/renormalization+group'>renormalization group flow</a> has a non-trivial <a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>non-perturbative</a> <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> such that the subspace of the space of <a class='existingWikiWord' href='/nlab/show/coupling+constants'>coupling constants</a> whose RG-flow converges to this fixed point is <a class='existingWikiWord' href='/nlab/show/finite+number'>finite</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a>.</p>
+<p>In the context of <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> (QFT) the term <em>asymptotic safety</em> (<a href='#Weinstein79'>Weinstein 79</a>) refers to the situation where a QFT may not be <a class='existingWikiWord' href='/nlab/show/renormalization'>renormalizable</a> (is not defined on all scales by the choice of a <a class='existingWikiWord' href='/nlab/show/finite+number'>finite number</a> of <a class='existingWikiWord' href='/nlab/show/coupling+constants'>coupling constants</a>), but has the property that its <a class='existingWikiWord' href='/nlab/show/renormalization+group+flow'>renormalization group flow</a> has a non-trivial <a class='existingWikiWord' href='/nlab/show/non-perturbative+effect'>non-perturbative</a> <a class='existingWikiWord' href='/nlab/show/fixed+point'>fixed point</a> such that the subspace of the space of <a class='existingWikiWord' href='/nlab/show/coupling+constants'>coupling constants</a> whose RG-flow converges to this fixed point is <a class='existingWikiWord' href='/nlab/show/finite+number'>finite</a> <a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a>.</p>
 
 <blockquote>
 <p>One defines the “UV-critical hypersurface” as the set of all those points in the infinite-dimensional theory space which are “pulled” into the fixed point by the inverse RG flow: trajectories lying in this surface approach the fixed point for increasing momentum scales. General arguments and known examples suggest that the UV-critical hypersurface has a finite dimensionality. This dimensionality equals the number of (infrared-) relevant couplings, i.e. couplings which get attracted to the fixed point in the UV. The important point is that once the value of these (few) couplings are known at some scale all other (irrelevant) couplings are fixed by requiring an asymptotically safe theory, that is a trajectory which lies entirely in the UV-critical hypersurface. By this means we achieve that, first, the couplings are determined by a finite number of measurements rendering the theory predictive, and, second, the UV behavior is unproblematic without any unphysical divergences. (<a href='#NinkReuter12'>Nink-Reuter 12, p. 2</a>)</p>
@@ -661,6 +661,20 @@ margin-left: 0em;
 <p>Similarly, if one trusts the <a class='existingWikiWord' href='/nlab/show/AdS-CFT'>AdS/CFT correspondence</a> then gravity is fundamentally not a local field theory, only its boundary <a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>CFT</a> is, in contradiction with asymptotic safety of gravity (<a href='#Shomer07'>Shomer 07, section IV</a>).</p>
 </li>
 </ol>
+
+<h2 id='properties_2'>Properties</h2>
+
+<h3 id='HiggsParticle'>Higgs particle self-coupling</h3>
+
+<p>The observed <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs particle</a> <a class='existingWikiWord' href='/nlab/show/mass'>rest mass</a> of about 125 <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a> implies that with <math class='maruku-mathml' display='inline' id='mathml_3e70b0a5d42cb80d04993e7c2c054c85fa3c9753_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> itself also the <a class='existingWikiWord' href='/nlab/show/beta+function'>beta function</a> <math class='maruku-mathml' display='inline' id='mathml_3e70b0a5d42cb80d04993e7c2c054c85fa3c9753_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>β</mi> <mi>λ</mi></msub></mrow><annotation encoding='application/x-tex'>\beta_\lambda</annotation></semantics></math> for the <a class='existingWikiWord' href='/nlab/show/coefficient'>coefficient</a> <math class='maruku-mathml' display='inline' id='mathml_3e70b0a5d42cb80d04993e7c2c054c85fa3c9753_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi></mrow><annotation encoding='application/x-tex'>\lambda</annotation></semantics></math> of the quartic part of the Higgs self-coupling is at least close to zero at high energy. It has been suggested that this is a reflection of the principle of asymptotic safety (<a href='#ShaposhnikovWetterich09'>Shaposhnikov-Wetterich 09</a>). But the refined analysis of <a href='#BDGGSSS13'>BDGGSSS 13</a> does not seem to support this picture (see p. 17):</p>
+
+<blockquote>
+<p>As shown in fig. 2 (upper right), the corresponding Higgs quartic <a class='existingWikiWord' href='/nlab/show/beta+function'>beta-function</a> vanishes at a <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> of about <math class='maruku-mathml' display='inline' id='mathml_3e70b0a5d42cb80d04993e7c2c054c85fa3c9753_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>17</mn></msup></mrow><annotation encoding='application/x-tex'>10^{17}</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_3e70b0a5d42cb80d04993e7c2c054c85fa3c9753_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>18</mn></msup></mrow><annotation encoding='application/x-tex'>10^{18}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>. In order to quantify the degree of cancellation in the β-function, we plot in fig. 2 (lower right) <math class='maruku-mathml' display='inline' id='mathml_3e70b0a5d42cb80d04993e7c2c054c85fa3c9753_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>β</mi> <mi>λ</mi></msub></mrow><annotation encoding='application/x-tex'>\beta_\lambda</annotation></semantics></math> in units of its pure <a class='existingWikiWord' href='/nlab/show/top+quark'>top quark</a> contribution. The vanishing of <math class='maruku-mathml' display='inline' id='mathml_3e70b0a5d42cb80d04993e7c2c054c85fa3c9753_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>β</mi> <mi>λ</mi></msub></mrow><annotation encoding='application/x-tex'>\beta_\lambda</annotation></semantics></math> looks more like an accidental cancellation between various large contributions, rather than an asymptotic approach to zero.</p>
+</blockquote>
+
+<p><img src='https://ncatlab.org/nlab/files/HiggsQuarticBetaFunction.png' width='800'/></p>
+
+<p>See also at <em><a href='Higgs+field#AsymtoticSafetyOrNot'>Higgs field – asymptotic safety?</a></em></p>
 
 <h2 id='references'>References</h2>
 
@@ -711,22 +725,34 @@ margin-left: 0em;
 <p>Jorn Biemans, Alessia Platania, Frank Saueressig, <em>Renormalization group fixed points of foliated gravity-matter systems</em> (<a href='https://arxiv.org/abs/1702.06539'>arXiv:1702.06539</a>)</p>
 </li>
 </ul>
+
+<p>The suggestion that asymptotic safety explains the observed <a class='existingWikiWord' href='/nlab/show/mass'>mass</a> of the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs particle</a> is attributed to</p>
+
+<ul>
+<li id='ShaposhnikovWetterich09'>M. Shaposhnikov and C. Wetterich, <em>Asymptotic safety of gravity and the Higgs boson mass</em>, Phys. Lett. B 683 (2010) 196 (<a href='https://arxiv.org/abs/0912.0208'>arXiv:0912.0208</a>)</li>
+</ul>
+
+<p>but see p. 17 of</p>
+
+<ul>
+<li id='BDGGSSS13'>Dario Buttazzo, Giuseppe Degrassi, Pier Paolo Giardino, <a class='existingWikiWord' href='/nlab/show/Gian+Giudice'>Gian Giudice</a>, Filippo Sala, Alberto Salvio, Alessandro Strumia, section 7 of <em>Investigating the near-criticality of the Higgs boson</em> (<a href='https://arxiv.org/abs/1307.3536'>arXiv:1307.3536</a>)</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on January 14, 2018 07:53:05 
+  Revised on April  3, 2018 05:17:14
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/asymptotic+safety" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+safety/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/asymptotic+safety" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+safety" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/asymptotic+safety" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/asymptotic+safety/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/asymptotic+safety" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/asymptotic+safety" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/asymptotic+safety" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/asymptotic+safety" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/asymptotic+safety" id="view_source" rel="nofollow">Source</a>
