--- a/pages/19092.html
+++ b/pages/19092.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      fields and quanta - table in nLab
+      top quark in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      fields and quanta - table
+      top quark
   </h1>
 
 
@@ -308,7 +308,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='fields_and_quanta'>Fields and quanta</h4>
+
+<div class='hide'>
+<p><a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field (physics)</a></p>
 
 <p><strong><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></strong></p>
 
@@ -454,24 +461,41 @@ margin-left: 0em;
 </li>
 </ul>
 </div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>In the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> the <em>top quark</em> is the up-type <a class='existingWikiWord' href='/nlab/show/quark'>quark</a> in the third <span class='newWikiWord'>generation of fermions<a href='/nlab/new/generation+of+fermions'>?</a></span>.</p>
+
+<p>It is the <a class='existingWikiWord' href='/nlab/show/fundamental+particle'>fundamental particle</a> with by far the largest <a class='existingWikiWord' href='/nlab/show/mass'>rest mass</a> (after <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs mechanism</a>). This implies that top quark <a class='existingWikiWord' href='/nlab/show/virtual+particle'>virtual particles</a> in <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagrams</a> typically gives the dominant contribution to <a class='existingWikiWord' href='/nlab/show/loop+order'>loop effects</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative</a> <a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observables</a>, notably in relation to the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs field</a>.</p>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Top_quark'>Top quark</a></em></li>
+</ul>
+</div>
 
 <div class="revisedby">
-  Revised on April  3, 2018 05:01:50
+  Created on April  3, 2018 05:05:31
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fields+and+quanta+-+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fields+and+quanta+-+table/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/fields+and+quanta+-+table" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fields+and+quanta+-+table" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/top+quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/fields+and+quanta+-+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/top+quark" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/fields+and+quanta+-+table" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/top+quark" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/fields+and+quanta+-+table" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/top+quark" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
