--- a/pages/9187.html
+++ b/pages/9187.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,11 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> |
+    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
+    <a href="/nlab/authors" title="Who wrote what">Authors</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
     <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -308,7 +308,9 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='references'>References</h2>
+    <p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> the <a class='existingWikiWord' href='/nlab/show/scale+transformation'>scale</a> of the <a class='existingWikiWord' href='/nlab/show/Planck+mass'>Planck mass</a> (about <math class='maruku-mathml' display='inline' id='mathml_aad8c542ba28caaa852425bbd9c16d06993e4873_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>19</mn></msup></mrow><annotation encoding='application/x-tex'>10^{19}</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/GeV'>GeV</a>) or <a class='existingWikiWord' href='/nlab/show/Planck+length'>Planck length</a> is typically called the <em>Planck scale</em>.</p>
+
+<h2 id='references'>References</h2>
 
 <ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Planck_scale'>Planck scale</a></em></li>
@@ -316,19 +318,19 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on January 11, 2013 01:01:23 
+  Revised on April  3, 2018 07:30:26
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.113.98.146)
+  (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Planck+scale" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/Planck+scale" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Planck+scale/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Planck+scale" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Planck+scale" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Planck+scale" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Planck+scale" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Planck+scale" id="view_source" rel="nofollow">Source</a>
